--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.couchbase.client</groupId>
-            <artifactId>java-client</artifactId>
-            <version>3.10.1</version>
-            <scope>compile</scope>
+            <groupId>io.quarkiverse.couchbase</groupId>
+            <artifactId>quarkus-couchbase</artifactId>
+            <version>1.2.0</version>
         </dependency>
 
         <dependency>
