--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,14 +2,16 @@ quarkus:
   http:
     port: 41005
 
-couchbase:
-    connection:
-      url: ${COUCHBASE_URL}
-      username: ${COUCHBASE_USERNAME}
-      password: ${COUCHBASE_PASSWORD}
-      bucketName: ${COUCHBASE_BUCKET_NAME}
+  couchbase:
+    connection-string: ${COUCHBASE_URL}
+    username: ${COUCHBASE_USERNAME}
+    password: ${COUCHBASE_PASSWORD}
 
-    dmc:
-      bucketName: ${COUCHBASE_DMC_BUCKET_NAME}
-      bucketScope: ${COUCHBASE_DMC_BUCKET_SCOPE}
-      bucketCollection: ${COUCHBASE_DMC_BUCKET_COLLECTION}
+  devservices:
+    enabled: false
+
+couchbase:
+  dmc:
+    bucketName: ${COUCHBASE_DMC_BUCKET_NAME}
+    bucketScope: ${COUCHBASE_DMC_BUCKET_SCOPE}
+    bucketCollection: ${COUCHBASE_DMC_BUCKET_COLLECTION}
